force-app/main/default/objects/AI_Model_Config__mdt/AI_Model_Config__mdt.object-meta.xml
<CustomObject>
    <label>AI Model Config</label>
    <pluralLabel>AI Model Configs</pluralLabel>
</CustomObject>