force-app/main/default/objects/AI_Model_Config__mdt/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Currency used for pricing (e.g., USD, INR).</description>
    <label>Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>