force-app/main/default/objects/AI_Model_Config__mdt/fields/Model_ID__c.field-meta.xml
<CustomField>
    <fullName>Model_ID__c</fullName>
    <label>Model ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>