force-app/main/default/objects/AI_Model_Config__mdt/fields/Price_Per_1K_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_1K_Tokens__c</fullName>
    <label>Price Per 1K Tokens</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>