force-app/main/default/objects/AI_Model_Config__mdt/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>